# rustmailer

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.githooks/: commit-msg  pre-commit
docs/plans/: 2026-03-24-frontend-foundation-design.md  2026-03-24-frontend-foundation.md  2026-03-24-git-hooks-design.md  2026-03-24-git-hooks.md  2026-03-24-mail-server-design.md  2026-03-24-mail-server.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/scripts/: check-external-links.mjs
frontend/src/: App.css  App.tsx  index.css  main.tsx
infra/certbot/: renew.sh
infra/nginx/: Dockerfile  default.conf  entrypoint.sh
scripts/: setup-git-hooks.sh
server/: Cargo.toml  Dockerfile
server/migrations/: 0001_initial_schema.sql
server/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  tls.rs
server/src/core/: commands.rs  entities.rs  events.rs  mod.rs  service.rs
server/src/db/: mod.rs  models.rs  repositories.rs
server/src/http/: mod.rs  state.rs
server/src/http/routes/: audit.rs  auth.rs  domains.rs  mailboxes.rs  mod.rs  system.rs
server/src/imap/: mod.rs  parser.rs  session.rs
server/src/smtp/: mod.rs  parser.rs  session.rs
server/tests/: admin_api.rs  app_boot.rs  domain_mailbox_repository.rs  enabled_state.rs  imap_flow.rs  imap_runtime.rs  imaps_runtime.rs  message_flow.rs  provision_mailbox.rs  runtime_tls_ports.rs  smtp_flow.rs  smtp_runtime.rs  smtp_starttls_runtime.rs  tls_reload.rs
server/tests/fixtures/certs/reloadable/: fullchain.base.pem  fullchain.next.pem  privkey.base.pem  privkey.pem
(+8 files in other folders)
