[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0.149"
tower = { version = "0.5.2", features = ["util"] }
